Solve part problem with code